[Android] More moving and renaming

--- a/android-viewradar/mobile/src/main/res/layout/device_list.xml
+++ b/android-viewradar/mobile/src/main/res/layout/device_list.xml
@@ -4,6 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="Start camera on start up" />
+
     <TextView android:id="@+id/title_paired_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
