--- a/android-viewradar/mobile/src/main/res/layout/activity_main.xml
+++ b/android-viewradar/mobile/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nl.hva.viewradar.viewradar.MainActivity"
+    tools:context="nl.hva.viewradar.activities.MainActivity"
     >
 
     <SurfaceView
@@ -28,20 +28,5 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="false"
         android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="21dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="30dp"
-        android:text="TextView"
-        android:gravity="bottom"
-        android:scrollbars="vertical"
-        android:textColor="@android:color/white"/>
 
 </RelativeLayout>
