--- a/android-viewradar/wear/src/main/res/layout/camera.xml
+++ b/android-viewradar/wear/src/main/res/layout/camera.xml
@@ -13,27 +13,6 @@
         android:longClickable="true"
         android:clickable="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="2"
-        android:id="@+id/camera_time"
-        android:layout_gravity="center"
-        android:visibility="gone"
-        android:textSize="@android:dimen/notification_large_icon_height" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/camera_result"
-        android:layout_gravity="right|center_vertical"
-        android:onClick="imageView_onClick"
-        android:scaleType="fitCenter"
-        android:longClickable="true"
-        android:clickable="true"
-        android:visibility="gone" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/action_background_color"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:textColor="@color/white"
             android:textSize="24sp"
             tools:text="Yo Cor"
