--- a/android-viewradar/mobile/src/main/res/layout/activity_main.xml
+++ b/android-viewradar/mobile/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:onClick="onClickSwitch" />
+        android:layout_alignParentBottom="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
