--- a/android-viewradar/mobile/src/main/res/layout/device_name.xml
+++ b/android-viewradar/mobile/src/main/res/layout/device_name.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18sp"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:textColor="@android:color/white"
+    android:text="DeviceName">
 
 </TextView>
